@@ -1,3 +1,12 @@
+Tue Jun 26 22:10:07 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: More cleanup. No substantive changes.
+	* include/manconfig.h.in: Likewise. Also bring xrealloc() prototype
+	  into sync.
+
+	* src/mandb.c (main): Allow root as well as MAN_OWNER to work on
+	  system manpaths.
+
 Tue Jun 26 03:45:01 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/man_db.conf.in (SECTION): Add a little more advice about where
